# otus-hw

./: CMakeLists.txt  ip_filter.cpp  ip_filter.hpp  main.cpp  test_ip_filter.cpp  test_version.cpp
.github/workflows/: release.yml
app/allocator/: CMakeLists.txt
app/allocator/src/: allocator.cpp
app/ipFilter/: CMakeLists.txt
app/ipFilter/src/: main.cpp
cmake/: find-gtest.cmake
lib/: CMakeLists.txt
lib/allocator/: CMakeLists.txt
lib/allocator/inc/: allocator_lib.hpp
lib/allocator/test/: CMakeLists.txt
lib/allocator/test/src/: allocator_test.cpp
lib/ipFilter/: CMakeLists.txt
lib/ipFilter/inc/: ipFilter_lib.hpp
lib/ipFilter/src/: ipFilter_lib.cpp
lib/ipFilter/test/: CMakeLists.txt
lib/ipFilter/test/src/: test_ipFilter.cpp
